Add text for OurStory::Proposal section

--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -163,7 +163,16 @@
     <div class="section-container">
         <h2>The Proposal</h2>
         <p>
-            Mayank proposed to Ananya during a beautiful sunset at the beach. It was a perfect moment that they will cherish forever. Ananya said yes, and now they are excited to start their journey together.
+            Nothing short of a dream! Masai Mara has been on Ananya’s bucket list since childhood. Those of you who know Ananya, you might know how much she loves sunsets and animals (borderline obsessed with elephants). Mayank planned this gorgeous proposal in the middle of the Mara with the help of their close friend, Mandira.
+        </p>
+        <p>
+            They had already been out for a day long safari and towards the end of the day, it took a lot of convincing to get Ananya out of the bed for the evening safari (HT Mandira).  After spotting a pride of lions, the jeep pulled into a hilly spot in the middle of the Mara with a tent and bonfire set-up and live music in the background! It was a cloudy day but (as cliche as it sounds), the clouds cleared up and had the sun setting over the gorgeous Mara landscape. Right when they got out of the jeep, Mayank went down on one knee and popped the question! And she said “yes”! With tears of joy in their eyes, they hugged and celebrated this start of this new chapter, looking into the sunset of this dreamy land.
+        </p>
+        <p>
+            And if you know Mayank, he will go an extra mile to make every moment count! Right after coming back, he had planned for a romantic dinner on a treehouse under the stars where he showed Ananya a short film that he had made with messages from their family! And the next few days, they went on another safari to celebrate this new chapter!
+        </p>
+        <p>
+            That day holds such a special place in their hearts and it was absolutely magical.
         </p>
     </div>
 
