--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 
 <nav>
     <a href="{{ url_for('home') }}">Home</a>
-    <a href="{{ url_for('our_story') }}">Our Story</a>
+    <a href="{{ url_for('our_story') }}">Story</a>
     <a href="{{ url_for('schedule') }}">Schedule</a>
     <a href="{{ url_for('faq') }}">FAQs</a>
     <a href="{{ url_for('travel') }}">Travel</a>
